melhoria no layout do email

--- a/templates/email-confirmation.hbs
+++ b/templates/email-confirmation.hbs
@@ -4,16 +4,13 @@
   <center>
     <div style="
           max-width: 840px; 
-          height: 500px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
           align-items: center;
           background-color: #FFF; 
           margin: 0; 
           padding: 30px;">
-      <img src="{{siteUrl}}/images/logo.svg" alt="Logo" style="
-              width: 150px;
+      <img src="https://i.ibb.co/JrkqY8C/Ativo-1.png" alt="Logo" style="
+              width: 100px;
+              height: 140px;
               margin: 0 auto;
               display: block;">
       <h2 style="color: #5b4a3f;">Confirmação de email</h2>
