--- a/templates/recover-password.hbs
+++ b/templates/recover-password.hbs
@@ -12,7 +12,7 @@
           background-color: #FFF; 
           margin: 0; 
           padding: 30px;">
-      <img src="{{siteUrl}}/images/logo.svg" alt="Logo" style="
+      <img src="https://i.ibb.co/JrkqY8C/Ativo-1.png" alt="Logo" style="
               width: 150px;
               margin: 0 auto;
               display: block;">
